@@ -1,5 +1,11 @@
 2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>
 
+	* network-conf.in (fixdown_profile_interface_format),
+	(fixdown_profile_format): added functions for translating the old
+	profile format to the new one
+
+2004-12-06  Carlos Garnacho Parro  <carlosg@gnome.org>
+
         * file.pl.in (gst_file_get_temp_name): added.
         * network.pl.in (gst_network_enable_iface_with_config): splitted in
         several functions. Handled too the modem stuff, creating a temporary
